k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wgi
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
